k8/forecast-conf.yaml
apiVersion: v1
kind: Pod
metadata:
  name: weather-api
  labels:
    app: quarkus-forcast
    api: quarkus-forcast-api
spec:
  containers:
    - name: forecast
      image: unipasssbackend/forecast:latest
      ports:
      - containerPort: 5000
        name: http
        protocol: TCP
      readinessProbe:
        httpGet:
          path: /q/health/ready
          port: 5000
        initialDelaySeconds: 3
        periodSeconds: 3
      livenessProbe:
        httpGet:
          path: /q/health/live
          port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: forecast-service
  labels:
    tier: backend
    app: quarkus-forcast
  anonotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  ports:
    - port: 5000
  selector:
    api: quarkus-forcast-api
