k8/forecast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-service
  labels:
    tier: backend
    app: quarkus-forcast
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  type: ClusterIp
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    api: quarkus-forcast-api
