k8/users-conf.yaml
apiVersion: v1
kind: Pod
metadata:
  name: users-pod
  labels:
    app: quarkus-users
    api: quarkus-users-api
spec:
  containers:
    - name: forecast-provider
      image: unipasssbackend/users:latest
      ports:
        - containerPort: 5100
          name: http
          protocol: TCP
      readinessProbe:
        httpGet:
          path: /q/health/ready
          port: 5100
        initialDelaySeconds: 3
        periodSeconds: 3
      livenessProbe:
        httpGet:
          path: /q/health/live
          port: 5100
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    tier: backend
    app: quarkus-users
spec:
  ports:
    - port: 5100
      targetPort: 5100
  selector:
    api: quarkus-users-api
