k8/users-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-db
spec:
  ports:
    - port: 3306
  selector:
    app: users-db
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db
spec:
  selector:
    matchLabels:
      app: users-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - image: mysql:5.6
          name: users-db
          ports:
            - containerPort: 3306
              name: users-db
