k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forecast-service
                port:
                  number: 5000
#          - path: /api/locations
#            pathType: Prefix
#            backend:
#              service:
#                name: forecast-service
#                port:
#                  number: 5000
#          - path: /api/ratings
#            pathType: Prefix
#            backend:
#              service:
#                name: forecast-service
#                port:
#                  number: 5000
